# pro2

./: .gitignore  README.md
P1/: CMakeLists.txt
p0/: CMakeLists.txt  main.c  rational_pointer.c  rational_pointer.h  rational_struct.c  rational_struct.h
p1/: dynamic_list.c  dynamic_list.h  main.c  static_list.c  static_list.h  types.h
p2/: CMakeLists.txt  bid_stack.c  bid_stack.h  config.cmake  main.c  product_list.c  product_list.h  test_bid_stack.c  test_product_list.c  types.h
